@@ -1,19 +1,16 @@
-Ideas for a linux-boot-proper:
+The grub linux-boot-probe has these limitations:
 
-- Look at etc/lilo.conf, boot/grub/menu.lst to get:
-	- kernel
-	- parameters
-	- initrd
+ - Does not handle grub present menus.
+ - Does not support things like (hd0,1)/path/to/file
+
+Need a lilo linux-boot-probe.
+
+linux-boot-proper:
+
 - Partition names in boot loader config may have changed during
   the debian install, so cannot be trusted. Fix up root= lines,
   etc.
-- To get to boot/, may need to parse fstab. Hmm, this makes it hard because
+- To get to boot/, may need to parse fstab. But this can fail because
   as noted above, drive names may have changed!
 - Maybe do some probing before partitioning and store info?
   Or don't support adding partitions before existing /boot partitions.
-- Return info in form similar to os-prober:
-  
-  rootpart:bootpart:kernel:initrd:parameters
-
-  The bootpart is the partition that contains the kernel and initrd.
-  The kernel and initrd files are given relative to this partition.
