@@ -1,24 +1,24 @@
 count_for() {
-  local labelprefix=$1
-  local result=$(grep "^${labelprefix} " /var/lib/os-prober/labels)
+  _labelprefix=$1
+  _result=$(grep "^${_labelprefix} " /var/lib/os-prober/labels 2>/dev/null)
 
-  if [ -z "$result" ]; then
+  if [ -z "$_result" ]; then
     return
   else
-    echo "$result" | cut -d' ' -f2
+    echo "$_result" | cut -d' ' -f2
   fi
 }
 
 count_next_label() {
-  local labelprefix=$1
-  local cfor="$(count_for ${labelprefix})"
+  _labelprefix=$1
+  _cfor="$(count_for ${_labelprefix})"
 
-  if [ -z "$cfor" ]; then
-    echo "${labelprefix} 1" >> /var/lib/os-prober/labels
+  if [ -z "$_cfor" ]; then
+    echo "${_labelprefix} 1" >> /var/lib/os-prober/labels
   else
-    sed "s/^${labelprefix} ${cfor}/${labelprefix} $(($cfor + 1))/" /var/lib/os-prober/labels > /tmp/os-prober.tmp
+    sed "s/^${_labelprefix} ${_cfor}/${_labelprefix} $(($_cfor + 1))/" /var/lib/os-prober/labels > /tmp/os-prober.tmp
     mv /tmp/os-prober.tmp /var/lib/os-prober/labels
   fi
   
-  echo "${labelprefix}${cfor}"
+  echo "${_labelprefix}${_cfor}"
 }
