@@ -3,7 +3,6 @@
 # (C) 2004 Joshua Kwan <joshk@triplehelix.org>
 
 ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
-PLACE=debian/os-prober
 build:
 # Ye olde no-op.
 
@@ -16,14 +15,16 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_installdirs
-	dh_install
-ifneq (,$(wildcard $(ARCH)/))
-	dh_install $(ARCH)/* usr/share/os-prober
-endif
-ifneq (,$(wildcard mounted/$(ARCH)))
-	dh_install mounted/$(ARCH)/* usr/share/os-prober/mounted
-endif
+	dh_installdirs var/lib/os-prober/mount
+	dh_install os-prober linux-boot-prober bin
+	dh_install common.sh usr/share/os-prober
+	for probes in os-probes os-probes/mounted \
+	              linux-boot-probes linux-boot-probes/mounted; do \
+		dh_install $$probes/common/* usr/lib/$$probes; \
+		if [ -e "$$probes/$(ARCH)" ]; then \
+			dh_install $$probes/$(ARCH)/* usr/lib/$$probes; \
+		fi; \
+	done
 
 binary-indep: build install
 # Ye olde no-op.
