@@ -1,0 +1,46 @@
+#!/bin/sh
+set -e
+partition="$1"
+bootpart="$2"
+mpoint="$3"
+type="$4"
+
+parse_grub_menu () {
+	mpoint="$1"
+	rootpart="$2"
+	bootpart="$3"
+	while read line; do
+		set -- $line
+		case "$1" in
+			title)
+				shift 1
+				title="$(echo $@ | sed 's/://g')"
+			;;
+			kernel)
+				kernel="$2"
+				shift 2
+				parameters="$@"
+			;;
+			initrd)
+				initrd="$2"
+			;;
+			boot)
+				if [ -n "$kernel" ] && \
+				   [ -e "$mpoint/$kernel" ] && \
+				   [ -e "$mpoint/$initrd" ]; then
+					echo "$rootpart:$bootpart:$title:$kernel:$initrd:$parameters"
+				fi
+				kernel=""
+				parameters=""
+				initrd=""
+			;;
+		esac
+	done
+}
+
+if [ -e "$mpoint/boot/grub/menu.lst" ]; then
+	parse_grub_menu "$mpoint" "$partition" "$bootpart" < "$mpoint/boot/grub/menu.lst"
+	exit 0
+else
+	exit 1
+fi
