@@ -5,7 +5,7 @@ partitions () {
 	find /dev/discs/ -follow -type b | grep /part
 }
 
-for prog in /usr/share/os-prober/init/*; do
+for prog in /usr/lib/os-probes/init/*; do
 	if [ -x $prog ] && [ -f $prog ]; then
 		$prog || true
 	fi
@@ -13,7 +13,7 @@ done
 
 for partition in $(partitions); do
 	if ! grep -q "^$partition " /proc/mounts; then
-		for test in /usr/share/os-prober/*; do
+		for test in /usr/lib/os-probes/*; do
 			if [ -x $test ] && [ -f $test ] && \
 			   $test $partition; then
 			   	break
